--- a/style.css
+++ b/style.css
@@ -277,3 +277,28 @@ form .button2{
     margin-top: 20px;
     cursor: pointer;
 }
+
+/* Achievements */
+#achievements{
+    padding:80px 0;
+    color: #ababab;
+}
+
+.row{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.achieve-col-1{
+    flex-basis: 35%;
+}
+
+.achieve-col-1 img{
+    width: 100%;
+    border-radius: 15px;
+}
+
+.achieve-col-2{
+    flex-basis: 60%;
+}
