--- a/style.css
+++ b/style.css
@@ -206,6 +206,7 @@ nav ul li a:hover::after{
 }
 
 
+/* ----contact --- */
 .contact-left{
     flex-basis: 35%;
 }
@@ -218,10 +219,11 @@ nav ul li a:hover::after{
     margin-top: 30px;
 }
 
+
 .contact-left p i{
-    color:  #ff004f;
+    color: #ff004f;
     margin-right: 15px;
-    font-size: 25px;
+    font-size: 20px;
 }
 
 .social-icons{
@@ -235,6 +237,7 @@ nav ul li a:hover::after{
     color: #ababab;
     display: inline-block;
     transition: transform 0.5s;
+    padding-bottom: 20px;
 }
 
 .social-icons a:hover{
@@ -243,7 +246,7 @@ nav ul li a:hover::after{
 }
 
 .button {
-    background-color: #4CAF50; /* Green */
+    background-color:dodgerblue;
     border: none;
     color: white;
     padding: 15px 32px;
@@ -253,28 +256,42 @@ nav ul li a:hover::after{
     font-size: 16px;
     margin: 4px 2px;
     cursor: pointer;
-  }
-
-.button2 {background-color: #008CBA;}
-.contact-right form{
-    width: 90%;
 }
 
-form input,form textarea{
-    width: 90%;
+.button.btn2{
+    display: inline-block;
+    background-color: #ff004f;
+    border-radius: 12px;
+}
+
+.contact-right form{
+    width: 100%;
+}
+
+form input, form textarea{
+    width: 100%;
     border: 0;
     outline: none;
     background: #262626;
     padding: 15px;
     margin: 15px 0;
     color: #fff;
+    font-size: 15px;
     border-radius: 6px;
 }
 
-form .button2{
-    padding: 14px 60px;
-    font-size: 18px;
+.copyright{
+    width: 100%;
+    text-align: center;
+    padding: 25px 0;
+    background: #262626;
+    font-weight: 300;
     margin-top: 20px;
-    cursor: pointer;
 }
 
+/* responsive */
+/* @media only screen and(max-with:600px){
+    #header{
+        background-image
+    }
+} */
