--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@
 }
 
 body{
-    background: #080808;
+    background-image: url('images/background3.jpg');
+    background-size: cover;
     color: #fff;
 }
 
@@ -86,6 +87,7 @@ nav ul li a:hover::after{
 #about{
     padding:80px 0;
     color: #ababab;
+    font-weight: 600;
 }
 
 .row{
@@ -104,12 +106,12 @@ nav ul li a:hover::after{
 }
 
 .about-col-2{
-    flex-basis: 60%;
+    flex-basis: 50%;
 }
 
 .sub-title{
-    font-size: 60px;
-    font-weight: 600;
+    font-size: 50px;
+    font-weight: 400;
     color: white;
 }
 
@@ -289,9 +291,30 @@ form input, form textarea{
     margin-top: 20px;
 }
 
-/* responsive */
-/* @media only screen and(max-with:600px){
-    #header{
-        background-image
-    }
+
+/* achievements */
+/* About */
+/* #achievements{
+    padding:80px 0;
+    color: #ababab;
+}
+
+.row{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.achievement-col-1{
+    flex-basis: 35%;
+}
+
+.achievement-col-1 img{
+    width: 100%;
+    border-radius: 15px;
+}
+
+.achievement-col-2{
+    flex-basis: 60%;
 } */
+
