--- a/style.css
+++ b/style.css
@@ -6,15 +6,14 @@
 }
 
 body{
-    background-image: url('images/background3.jpg');
-    background-size: cover;
     color: #fff;
 }
 
 #header{
     width: 100%;
     height: 100vh;
-    /* background-image: url('images/background2.jpg'); */
+    background-image: url('images/background3.jpg');
+    background-position: top;
     background-size: cover;
     background-position: center;
 }
@@ -87,6 +86,7 @@ nav ul li a:hover::after{
 /* About */
 #about{
     padding:80px 0;
+    background: #000000;
     color: #ababab;
     font-weight: 600;
 }
@@ -166,6 +166,7 @@ nav ul li a:hover::after{
 
 #projects{
     padding: 30px 0;
+    background: #000000;
 }
 
 .projects-list{
@@ -210,6 +211,9 @@ nav ul li a:hover::after{
 
 
 /* ----contact --- */
+#contact{
+    background: #000000;
+}
 .contact-left{
     flex-basis: 35%;
 }
@@ -294,11 +298,13 @@ form input, form textarea{
 
 
 /* achievements */
-/* About */
 /* #achievements{
     padding:80px 0;
-    color: #ababab;
-}
+    background: #000000;
+} */
+/* About */
+/* 
+
 
 .row{
     display: flex;
